rewrite car info endpoint
