# internal/cars/dto/cars_status_dto.go
@@ -1,6 +1,0 @@
-package dto
-
-type CarStatusResponse struct {
-	Status  string `json:"status"`
-	Message string `json:"message"`
-}
